add Hero section

--- a/My-Portfolio/index.html
+++ b/My-Portfolio/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="CSS/styles.css">
   <title>Elechia Juma</title>
 </head>
@@ -31,6 +32,18 @@
     </div>
   </nav>
 </header>
+<section id="hero">
+ <h1>ELECHIA OTIENO JUMA</h1>
+ <p>Front-End Development &#124;
+ Web Design &#124;
+ Database Solutions</p>
+ <p>Crafting Seamless Digital Experiences – Front-End Development, Web Design & Database Solutions.Let’s build something great together – from clean code to captivating design and rock-solid databases</p>
+ <Button id="blue-but">My Projects</Button>
+ <Button id="gray-but">My CV</Button>
+</section>
+
+
+
 <script src="Js/main.js"></script>
 </body>
 </html>
