add project section and style

--- a/My-Portfolio/index.html
+++ b/My-Portfolio/index.html
@@ -36,13 +36,76 @@
  <h1>ELECHIA OTIENO JUMA</h1>
  <p>Front-End Development &#124;
  Web Design &#124;
- Database Solutions</p>
- <p>Crafting Seamless Digital Experiences – Front-End Development, Web Design & Database Solutions.Let’s build something great together – from clean code to captivating design and rock-solid databases</p>
+ Database</p>
+ <p>Crafting Seamless Digital Experiences – Front-End Development, Web Design & Database Solutions.</p>
  <Button id="blue-but">My Projects</Button>
  <Button id="gray-but">My CV</Button>
 </section>
+<section id="about">
+<h2>About Me</h2>
+<hr>
+
+<div class="about-container">
+  <!-- Logo or Image -->
+  <div class="about-logo">
+    <img src="Assets/Images/Elechia.jpg" alt="Your Logo">
+  </div>
+
+  <!-- About Me Text -->
+  <div class="about-text">
+    <p><strong>Hi there! I’m </strong>, a passionate <strong>Front-End Web Developer</strong>, <strong>Database Specialist</strong>, and <strong>Web Designer</strong> dedicated to crafting exceptional digital experiences. With a knack for turning ideas into user-friendly interfaces, I love bridging the gap between elegant design and seamless functionality.</p>
+
+    <p>I specialize in creating responsive, visually appealing websites using <strong>HTML, CSS, JavaScript, and modern frameworks</strong>. My goal is to ensure your users enjoy an engaging and intuitive browsing experience.</p>
+
+    <a href="#contact" class="connect-btn">Let’s Connect</a>
+  </div>
+</div>
+</section>
 
 
+  <h2>My Projects</h2>
+  <div class="blue-line"></div>
+  <p class="section-description">Check out some of my latest work and technologies I’m excited about!</p>
+  <section class="projects-section">
+
+  <div class="project-card">
+    <img src="Assets/Images/Elechia.jpg" alt="Project 1">
+    <p class="project-description">A simple project showcasing responsive design and modern CSS features.</p>
+    <ul class="technologies">
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+    </ul>
+    <a href="https://github.com/username/project1" class="github-button" target="_blank">GitHub</a>
+  </div>
+
+  <div class="project-card">
+    <img src="Assets/Images/Elechia.jpg" alt="Project 2">
+    <p class="project-description">An interactive web app that uses dynamic JavaScript features.</p>
+    <ul class="technologies">
+      <li>React</li>
+      <li>CSS</li>
+      <li>API</li>
+    </ul>
+    <a href="https://github.com/username/project2" class="github-button" target="_blank">GitHub</a>
+  </div>
+
+  <div class="project-card">
+    <img src="Assets/Images/Elechia.jpg" alt="Project 3">
+    <p class="project-description">A portfolio project showcasing personal work with animation.</p>
+    <ul class="technologies">
+      <li>Vue</li>
+      <li>SCSS</li>
+      <li>Animations</li>
+    </ul>
+    <a href="https://github.com/username/project3" class="github-button" target="_blank">GitHub</a>
+  </div>
+
+</section>
+
+
+<!-- Back to Top Button -->
+<button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">↑</button>
 
 <script src="Js/main.js"></script>
 </body>
